fix z-index (mobile)

--- a/core/components/SiteTemplate/SiteSidebar.module.sass
+++ b/core/components/SiteTemplate/SiteSidebar.module.sass
@@ -54,7 +54,7 @@
     display: block
     height: unset
     width: unset
-    z-index: 9
+    z-index: 15
 
     .footer
       display: none
